--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
 
-    <title>Research Assistant</title>
+    <title>Rat Proxy</title>
 
     <link rel="icon" href="favicon.jpg" type="image/png" />
 
+    <!-- Dark theme CSS -->
     <link rel="stylesheet" href="index.css" />
 
     <script src="/scram/scramjet.all.js"></script>
@@ -21,11 +22,19 @@
     <script src="index.js" defer></script>
   </head>
 
-  <body style="background-color: #fff; color: #000;">
-
+  <body>
     <!-- Title -->
-    <div class="flex-center" style="margin: 10px 0; font-size: 3rem; font-weight: bold; color: #000;">
-      Research Assistant
+    <img
+      src="favicon.png"
+      alt="Logo"
+      style="width: 150px; margin-bottom: 10px"
+    />
+
+    <div
+      class="flex-center"
+      style="margin: 10px 0; font-size: 3rem; font-weight: bold"
+    >
+      Rat Proxy
     </div>
 
     <!-- Search form -->
@@ -35,11 +44,7 @@
         type="hidden"
         value="https://www.google.com/search?q=%s"
       />
-      <input
-        id="sj-address"
-        type="text"
-        placeholder="Find helpful information"
-      />
+      <input id="sj-address" type="text" placeholder="Search the web freely" />
     </form>
 
     <!-- Errors -->
