--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <title>Rat Proxy</title>
 
-    <link rel="icon" href="rat.jpg" type="image/png" />
+    <link rel="icon" href="rat.png" type="image/png" />
 
     <!-- Dark theme CSS -->
     <link rel="stylesheet" href="index.css" />
@@ -24,15 +24,11 @@
 
   <body>
     <!-- Title -->
-    <img
-      src="favicon.png"
-      alt="Logo"
-      style="width: 150px; margin-bottom: 10px"
-    />
+    <img src="rat.png" alt="Logo" style="width: 200px; margin-bottom: -25px" />
 
     <div
       class="flex-center"
-      style="margin: 10px 0; font-size: 3rem; font-weight: bold"
+      style="margin: 0px 0; font-size: 3rem; font-weight: bold"
     >
       Rat Proxy
     </div>
